{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1029,
  "lineage": "24816029-c9b4-a548-89b8-08550760d14b",
  "resources": [
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.36.3.44",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-18T11:18:30.731-07:00",
            "id": "projects/tag-engine-develop/global/addresses/tag-engine-lb-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "tag-engine-lb-address",
            "prefix_length": 0,
            "project": "tag-engine-develop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tag-engine-develop/global/addresses/tag-engine-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": []
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-18T11:18:23.848-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "Gpv0BWJXrCU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/tag-engine-develop/global/urlMaps/tag-engine-lb-https-redirect",
            "map_id": 69615938343086720,
            "name": "tag-engine-lb-https-redirect",
            "path_matcher": [],
            "project": "tag-engine-develop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tag-engine-develop/global/urlMaps/tag-engine-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}